<resources>
    <string name="app_name">MyStudy</string>
    <string name="name">이름</string>
    <string name="nameHint">이름을 입력하세요</string>
    <string name="grade">학년</string>
    <string name="grade_1">1학년</string>
    <string name="grade_2">2학년</string>
    <string name="grade_3">3학년</string>
    <string name="reset">초기화 하기</string>
    <string name="menu">오늘의 메뉴선택</string>
    <string name="num">2</string>
</resources>